--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!doctype html>
-<html>
+<html lang="fr" dir="ltr">
 
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <title>Duck Hunt</title>
   <link rel="stylesheet" href="duckhunt.css" />
-
 </head>
 
 <body>
 
-  <script src="duckhunt.js"></script>
+  <div class="count shadow p-3 mb-5 bg-transparent rounded fs-1">
+    <span><span class="counter">0</span> ducks killed!</span>
+  </div>
+
+  <div class="container">
+    <div class="btnStart text-center">
+      <button class="start bg-transparent btn btn-outline-dark">start</button>
+    </div>
+  </div>
+
+  <script src=" duckhunt.js"></script>
 </body>
 
 </html>
