jeu fini question mark, spoiler c'est claqué au sol :)

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 
 <body>
-  <div class="count shadow p-3 mb-5 bg-transparent rounded fs-1">
-    <span><span class="counter">0</span> ducks killed!</span>
+  <div class="count shadow p-3 mb-5 bg-transparent rounded fs-1 board">
+    <span><span class="counter ">0</span> ducks killed!</span>
   </div>
   <div class="container visible" id="masquage" onClick="masquage()">
     <div class="btnStart text-center">
-      <button class="start bg-transparent btn btn-outline-dark ">start</button>
+      <button class="start bg-transparent btn btn-outline-dark ">Start the killing spree</button>
     </div>
   </div>
 
